Changelog
==========

0.2
---

- Added service /invoices

- Added service /search

- Item schema: new product tax class "6" (Non-Taxable goods), removed class 0

- Added service /orders

- Item schema: added delivery_period (vors. Lieferzeitraum in KW)

- Item schema: added max_sale_qty_without_verification (for X-Bestellungen)

- Item schema: new __type__ "sortendetail_xbestellung_vpe", renamed
  sortendetail_vpe to sortendetail_default_vpe

- Item schema: added inventory_qty, backorders_allow, inventory_qty_increments    

- Item schema TierPrice: renamed min_sale_qty to qty, renamed customer_group to customer_group_id 

- BasicNode schema: renamed shortdescription to short_description

- schema: use Float instead of Decimal

- Item schema:  price field is now a sequence of WebsitePrice.
    [("de_website", 1)] instead of {default: 1, "websites": [("de_website", 1)]}

- ItemUpdate schema: you cannot update the sku field anymore


0.1
---

-  Initial version